--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
     <div class="container">
         <div class="body">
-            
+           <img src="img/banner.jpg" alt=""> 
+           <div class="song-title">
+               <h4>Sounds of Nature</h4>
+               <p>The Outside Players</p>
+           </div>
+           <div class="progress-bar">
+               <span style="width: 25%"></span>
+           </div>
         </div>
     </div>
 </body>
