--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="body">
+        <label for="">&#9776;</label>
+        <div class="body"> 
            <img src="img/banner.jpg" alt=""> 
            <div class="song-title">
                <h4>Sounds of Nature</h4>
@@ -19,6 +20,7 @@
            <div class="progress-bar">
                <span style="width: 25%"></span>
            </div>
+           <p class="time">-3:07</p>
         </div>
     </div>
 </body>
