upper icons added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <label for="">&#9776;</label>
+        <div class="top">
+            <label for="">&#9776;</label>
+            <i class="far fa-heart"></i>
+        </div>
         <div class="body"> 
            <img src="img/banner.jpg" alt=""> 
            <div class="song-title">
@@ -21,6 +24,12 @@
                <span style="width: 25%"></span>
            </div>
            <p class="time">-3:07</p>
+        </div>
+        <div class="controls">
+            <i class="fas fa-backward"></i>
+            <i class="far fa-play-circle"></i>
+            <i class="fas fa-forward"></i>
+
         </div>
     </div>
 </body>
